--- a/slides/_common.qmd
+++ b/slides/_common.qmd
@@ -3,6 +3,21 @@
 #| message: false
 #| warning: false
 library(tidyverse)
+library(patchwork)
 theme_set(theme_minimal(base_size = 10))
 options(width = 60)
 ```
+
+::: {.content-hidden when-format="beamer"}
+
+\DeclareMathOperator*{\argmin}{\arg\!\min}
+
+\DeclareMathOperator*{\minimize}{minimize}
+
+\DeclareMathOperator{\E}{\mathrm{E}}
+
+\DeclareMathOperator{\var}{Var}
+
+\DeclareMathOperator{\cov}{Cov}
+
+:::
