--- a/exercises/U2.qmd
+++ b/exercises/U2.qmd
@@ -29,7 +29,7 @@ $$
 \int_{\mathbb{R}} \frac{3}{4}\left(1-x^2\right) \mathbf{1}_{[-1,1]}(x) \mathrm{d} x=\frac{3}{4} \int_{-1}^1\left(1-x^2\right) \mathrm{d} x=\frac{3}{4}\left[x-\frac{1}{3} x^3\right]_{-1}^1=1
 $$
 
-$K$ is a probability density function. For an absolute continuous random variable $X$ with density $K$ we have the following properties:
+$K$ is a probability density function. For an absolutely continuous random variable $X$ with density $K$ we have the following properties:
 
 $$
 \begin{aligned}
@@ -74,7 +74,7 @@ p1 <- ggplot(infrared, aes(x = log(F12), y = after_stat(density))) +
 p0
 p1
 ```
-Setting tbhe bandwidth to 0.1
+Setting the bandwidth to 0.1
 ```{r, warning=FALSE}
 # Density estimates with bw = 0.1
 dens <- as.data.frame(density(log(F12), bw = 0.1, kernel = "epanechnikov")[1:2])
@@ -117,7 +117,7 @@ my_dens_df <- as.data.frame(kern_dens_vec(log(F12), 1)[1:2])
 p1 + geom_line(data = my_dens_df, aes(x = x, y = y), color = "green")
 ```
 
-The two estimates don't match, despite the bandwidths being the same, why is that? If we look at the documentation for `density()`, we see that it uses an normalized kernel that guarantees $\sigma_K^2$ is scaled to 1. That means that the bandwidth we set on our kernel will have a different effect than setting the bandwith on `density()`, luckily, we can scale our bandwidth by a factor in order to obtain the same density estimate as we would have gotten by using `density()`. Namely, if we set the bandwidth to be $h = 1$ in `density()`, then we can choose our bandwidth to be $\tilde{h} = (\sigma_K^2)^{-1/2} h= (1/5)^{-1/2}$ to get the same density estimate, see [this article](https://bookdown.org/egarpor/NP-UC3M/kde-i-kde.html). 
+The two estimates don't match, despite the bandwidths being the same, why is that? If we look at the documentation for `density()`, we see that it uses a normalized kernel that guarantees $\sigma_K^2$ is scaled to 1. That means that the bandwidth we set on our kernel will have a different effect than setting the bandwidth on `density()`, luckily, we can scale our bandwidth by a factor in order to obtain the same density estimate as we would have gotten by using `density()`. Namely, if we set the bandwidth to be $h = 1$ in `density()`, then we can choose our bandwidth to be $\tilde{h} = (\sigma_K^2)^{-1/2} h= (1/5)^{-1/2}$ to get the same density estimate, see [this article](https://bookdown.org/egarpor/NP-UC3M/kde-i-kde.html). 
 
 ```{r, warning=FALSE}
 my_dens_df2 <- as.data.frame(kern_dens_vec(log(F12), sqrt(5))[1:2])
