Add argmax to operators

--- a/slides/_common.qmd
+++ b/slides/_common.qmd
@@ -12,6 +12,8 @@ options(width = 60)
 
 \DeclareMathOperator*{\argmin}{\arg\!\min}
 
+\DeclareMathOperator*{\argmax}{\arg\!\min}
+
 \DeclareMathOperator*{\minimize}{minimize}
 
 \DeclareMathOperator{\E}{\mathrm{E}}
