feat: add exercise session 3 contents

--- a/index.qmd
+++ b/index.qmd
@@ -80,6 +80,12 @@ for you to solve independently at your own pace.
   - [Exercises 5.1-5.2 in Chapter 5
     (CSwR)](https://cswr.nrhstat.org/random-number-generation#univariate:ex)
 
+#### Exercise Session 3
+
+- **Main topic**: Premature optimization
+- **In class walkthrough:** Exercises 3.4 (Chapter 3, CSWR) + 5.1-5.2 (Chapter 5, CSWR)
+- **Solutions**: TBA
+
 #### Lecture 6: Monte Carlo Methods and Importance Sampling
 
 - **Slides:** [Monte Carlo Methods and Importance Sampling](slides/lecture6.pdf)
